# aw-watcher-ai-coach

./: .gitignore  AGENT.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
contrib/: aw-coach.desktop  aw-coach.service
doc/: AI_COACH_CLI_DESIGN.md  AI_COACH_COMPETITIVE_ANALYSIS.md  AI_COACH_DESIGN.md  AI_COACH_IMPL_PLAN.md  AW_COACH_AGENT_UPGRADE_PLAN.md  STATE_MODEL_IMPL_GUIDE.md  WORK_ANALYSIS_REPORT.md  active-agent-analysis.md  active-agent-roadmap.md  cross-platform-migration.md  ocr-vlm-recommendation.md
scripts/: verify.sh
src/aw_coach/: __init__.py  __main__.py  analyzer.py  background_summary.py  chain_analyzer.py  classifier.py  cli.py  collector.py  config.py  context_parser.py  context_stack.py  correction.py  cron_runner.py  daemon.py  daily_insights.py  enriched_state.py  git_context.py  notification_gate.py  notify.py  policy.py  process_context.py  report.py  scheduler.py  screenshot.py  service_installer.py  state.py  storage.py  task_fusion.py  (+5 more)
tests/: test_ai.py  test_analyzer.py  test_background_summary.py  test_calibrate.py  test_chain_analyzer.py  test_cli.py  test_collector.py  test_config.py  test_context_parser.py  test_context_stack.py  test_daily_insights.py  test_detectors.py  test_e2e.py  test_enriched_state.py  test_git_context.py  test_notification_gate.py  test_notify.py  test_phase4.py  test_policy.py  test_process_context.py  test_report.py  test_rules.py  test_screenshot.py  test_service_installer.py  test_state.py  test_storage.py  test_task_perception.py  test_web_dashboard.py  test_web_integration.py
(+30 files in other folders)
